tests/NormalTests/paczka1/fuzzy1/15201670.err
Error in line 7: RxjldOSpAxu S513 62,0
Error in line 8: 9KKmyW6yXC S513 51,3
Error in line 12: A798 A683 51,0
Error in line 20: SrrAY2N S81 31,60
Error in line 11: 9KKmyW6yXC S81 79,5
Error in line 18: SrrAY2N S81 29,0
Error in line 22: 9KKmyW6yXC S513 66,9
Error in line 25: 9KKmyW6yXC S81 5,0
Error in line 33: Rxjl
Error in line 30: RxjldOSpAxu S513 38,5
